--- a/lesson1.tex
+++ b/lesson1.tex
@@ -88,7 +88,7 @@ pontos szabályai, egyelőre azt jegyezzük meg, hogy
 minden \emph{konkrét} dolog kisbetűvel írandó, és
 nem lehet benne szóköz.
 
-\begin{infobox}{}{Mohamed családfája}
+\begin{infobox}{.75}{Mohamed családfája}
 A programban a családfának csak egy nagyon kis
 szeletét használtuk, és még ezen a részen belül
 sem tartalmaz minden kapcsolatot, mert pl.~Ali
