--- a/konyvajanlo.tex
+++ b/konyvajanlo.tex
@@ -18,7 +18,7 @@ rengeteg érdekes feladat található (megoldásokkal!) az alábbiakban:
 \item[] H.~Coelho, J.~C.~Cotta, \emph{Prolog by Example---How to Learn, Teach and Use It}, Springer, 1988.
 \item[] B.~Demoen, Ph-L.~Nguyen, T.~Schrijvers, R.~Tron\c con, \emph{The First 10 Prolog Programming Contests}, Belgium, 2005.
 \end{itemize}
-Hatékony programok írásához sok hasznos és praktikus tanács-csal szolgál ez a könyv:
+Hatékony programok írásához praktikus tanácsokkal szolgál ez a könyv:
 \begin{itemize}[leftmargin=1.5cm,itemindent=-1cm,labelsep=0cm]
 \item[] R.~A.~O'Keefe, \emph{The Craft of Prolog}, MIT Press, 1990.
 \end{itemize}
