--- a/lesson3.tex
+++ b/lesson3.tex
@@ -101,7 +101,7 @@ listában az \pr{X} a lista \emph{eleje}, az \pr{Y}
 pedig a lista \emph{maradéka}. A maradék mindig vagy
 egy lista, vagy az üres lista atom.
 \index{lista!láncolt}\index{lista!üres}
-\index{lista!feje}\index{lista!maradéka}
+\index{lista!eleje}\index{lista!maradéka}
 
 A gyakorlatban mindig ezt az egyszerű formát
 használjuk, de fontos érteni, hogy ez valójában
