Converted the Kalah project

--- a/konyv.tex
+++ b/konyv.tex
@@ -19,6 +19,8 @@
 \usepackage{pdfpages}
 \usepackage{storebox}
 \usepackage{tcolorbox}
+\usepackage{tikz}
+\usetikzlibrary{trees}
 
 % Layout for debugging
 %\usepackage{showframe}
