--- a/lesson1.tex
+++ b/lesson1.tex
@@ -1,14 +1,12 @@
 % -*- fill-column: 52 -*-
 % (local-set-key (kbd "C-c C-f") 'display-fill-column-indicator-mode)
 
-\chapter{Ismerkedés}
-
+\chapter{Tények és szabályok}
 Az első leckében egy családfa vizsgálatán keresztül
 megismerkedünk a programok alkotóelemeivel és a
 \emph{rekurzió}\/val.
 
-\section{Tények}
-
+\subsection*{Tények}
 Egy Prolog program \emph{tényekből} és
 \emph{szabályokból} áll, amelyekből a számítógép
 következtetéseket tud levonni. Ha megadunk egy tény-
@@ -242,7 +240,7 @@ Készítsd el a saját családfádat (nagyszülőkig
 és unokatestvérekig)!
 \end{problem}
 
-\section{Szabályok}
+\subsection*{Szabályok}
 
 Eddig csak tényekkel foglalkoztunk, de valójában a
 Prolog programok nagy része \emph{szabályokból}
@@ -430,7 +428,7 @@ Fordítsd le Prologra!
   unokahúgait!
 \end{problem}
 
-\section{Rekurzív szabályok}
+\section{Rekurzió}
 Adjunk még egy utolsó szabályt a programunkhoz: az
 \emph{ős} fogalmát. Valakinek az őseit úgy kapjuk
 meg, hogy felfelé megyünk a családfában: ős a szülő,
