--- a/lesson2.tex
+++ b/lesson2.tex
@@ -3,7 +3,7 @@
 
 \chapter{Típusok és egyesítés}
 Ebben a leckében ...
-\section{Típusok}
+\subsection*{Típusok}
 Most, hogy már van egy első képünk a Prologról,
 ideje pontosabban megvizsgálni az alkotóelemeit.
 Egy Prolog \emph{kifejezés}\/nek négy típusa van:
@@ -160,7 +160,7 @@ Milyen struktúrával lehetne jól leírni egy
 téglalapot? Egy négyzetet? Egy kört?
 \end{problem}
 
-\section{Egyesítés}
+\subsection*{Egyesítés}
 Két kifejezés egyesíthető, ha azonosak, vagy ha a
 bennük levő változókat be lehet úgy állítani, hogy
 azonossá váljanak. Például a \pr{dátum(Év,Hónap,22)}
@@ -332,7 +332,7 @@ szabályt írhattuk volna egy sorban is:
 De általában a külön szabályokba írt változat jobban
 olvasható.
 
-\subsection*{Nyomkövetés}
+\section{Nyomkövetés}
 Ahhoz, hogy jobban megértsük a procedurális
 olvasatot, kövessük végig, hogy mit csinál a
 rendszer egy egyszerű feladat megoldásakor! Legyen a
