--- a/lesson3.tex
+++ b/lesson3.tex
@@ -1,8 +1,6 @@
 % -*- fill-column: 52 -*-
 % (local-set-key (kbd "C-c C-f") 'display-fill-column-indicator-mode)
 \chapter{Listák}
-Ebben a leckében ...
-\section{Listák}
 Ahogy a múltkor láttuk, egy Prolog kifejezés vagy
 egyszerű (konstans vagy változó), vagy egy fix
 aritású összetett struktúra. Gyakran előfordul
@@ -61,7 +59,7 @@ lista(a, lista(b, lista(c, vége)))
 
 A szokásos Prolog jelölés a \pr{lista} helyett a
 pont (\pr{.}) funktor, a \pr{vége} helyett pedig a
-szögletes zárójelpár (\pr{[]}) atom.\footnote{Az
+szögletes zárójelpár (\pr{[]}) atom.\footnote[2]{Az
 \name{SWI-Prolog} a pontot lecserélte a kicsit
 furcsán kinéző \pr{'[|]'} funktorra.}
 Az előző listát tehát erre átírva ilyet kapunk:
