--- a/konyv.tex
+++ b/konyv.tex
@@ -34,6 +34,10 @@
   \VerbatimEnvironment
   \begin{Verbatim}[frame=leftline,numbers=left,formatcom=\color{OliveGreen}]}{\end{Verbatim}
 }
+\newenvironment{program*}{
+  \VerbatimEnvironment
+  \begin{Verbatim}[frame=leftline,numbers=left,firstnumber=last,formatcom=\color{OliveGreen}]}{\end{Verbatim}
+}
 \newenvironment{query}{
   \VerbatimEnvironment
   \begin{Verbatim}[frame=leftline,formatcom=\color{Violet}]}{\end{Verbatim}
