--- a/eloszo.tex
+++ b/eloszo.tex
@@ -40,7 +40,7 @@ A problémamegoldás Prologban mindig két részből áll:
   fájlban megadunk egy szabályrendszert (a program
   \emph{forráskódját}). Ennek megírásához tetszőleges
   szövegszerkesztőt használhatunk.\index{forráskód}
-\item Ezzel kapcsolatban a programnak felteszünk kérdéseket.
+\item Ezzel kapcsolatban kérdéseket teszünk fel a programnak.
 \end{enumerate}
 A legtöbb Prolog rendszer indításkor mindössze egy kérdőjel kiírásával
 fogad minket; ezzel jelzi, hogy várja a kérdést:
